fix/ overflow의 영향을 받을 수 있는 indicator z-index값 수정

--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -61,6 +61,7 @@ main {
     left: 50%;
     transform: translateX(-50%);
     bottom: -20px;
+    z-index: 10;
   }
 }
 .carousel-container_indicator {
